# chat-llm-pro

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_and_push.sh  chat_docker-compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  server.py
app/: __init__.py
app/v1/: chat_server.py
app/v2/: chat_server.py
data/: __init__.py  example.json  prompt.json
data/store/: test.txt
data/store/eeb7de30fce367de0912dc3ad2cb5f0c/: doc.json  embedding.pickle  outline.txt  table.html  table.txt  tree.txt
exampls/: demo_hackathon.ipynb
model/: schema.py
notebook/: langchain.ipynb  openai-davinci003.ipynb
scripts/: Dockerfile  Dockerfile_py38
src/: extract.py  gpt.py  memect_llm.py
src/langchain/: __init__.py  example.py  extract.py  schema.py
src/utils/: base.py  data_store.py  doc.py  doc_enum.py  embedding.py  pdf.py
tests/: test_qdrant.py
volumes/etcd/member/snap/: db
volumes/etcd/member/wal/: 0000000000000000-0000000000000000.wal
volumes/milvus/rdb_data/: IDENTITY  LOG  OPTIONS-000007
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
web/: __init__.py
web/v2/: README.md  chat_server.py  run_app.py  start_app.py
web/v2/components/: __init__.py  chat_interface.py  knowledge_tab.py
web/v2/services/: __init__.py  chat_service.py  file_service.py  model_manager.py
web/v2/utils/: error_handler.py
web/v3/: README.md
web/v3/chatllm/: README.md  package-lock.json  package.json
web/v3/chatllm/src/: App.vue
web/v3/chatllm/src/components/: ViewPdf.vue
