[project]
name = "chat-llm-pro"
version = "0.1.0"
description = "大模型应用试验场"
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
    "flask>=3.1.1",
    "httpx>=0.28.1",
    "faiss_cpu",
    "Flask>=2.2.3",
    "gradio>=3.30.0",
    "kor>=0.9.2",
    "langchain>=0.0.170",
    "numpy",
    "openai>=0.27.6",
    "python-dotenv>=1.0.0",
    "qdrant_client>=1.1.7",
    "Requests>=2.30.0",
    "tqdm>=4.65.0",
    "sentence-transformers>=5.1.0",
    "langchain-community",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]


[tool.black]
line-length = 120
target-version = ['py312']


[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
